# CottDAW

./: .gitignore  Cargo.toml  README.md  index.ts  package.json
.build/: main.js  main.js.map
.cursor/plans/: gonio_export_dialog_b1a8ce9a.plan.md  rust_daw_mvp_5729b8fa.plan.md
crates/cott-core/: Cargo.toml
crates/cott-core/src/: archive.rs  automation.rs  clips.rs  commands.rs  dsp.rs  engine.rs  export.rs  graph.rs  ids.rs  import.rs  lib.rs  project.rs  scale.rs  time.rs
crates/cott-core/src/visualizers/: gonio.rs  mod.rs
crates/cott-daw/: Cargo.toml
crates/cott-daw/src/: app.rs  audio.rs  main.rs  plugins.rs
crates/cott-daw/src/ui/: arrangement.rs  export_dialog.rs  graph_editor.rs  mod.rs  piano_roll.rs  scale.rs  shortcuts.rs  transport.rs
crates/cott-daw/tests/: fake_worker_ipc.rs
crates/cott-ipc/: Cargo.toml
crates/cott-ipc/src/: lib.rs
crates/cott-vst-worker/: Cargo.toml
crates/cott-vst-worker/src/: classify.rs  fake.rs  host.rs  main.rs  vst.rs  vst2.rs  x11_editor.rs
docs/: architecture.md  development.md  user-guide.md
src/: App.tsx  index.html  main.tsx  styles.css
src/audio/: engine.ts  recorder.ts  synth.ts
src/components/: LoopRegion.tsx  NoteBlock.tsx  PianoKeys.tsx  PianoRoll.tsx  Toolbar.tsx  TrackList.tsx  TrackPanel.tsx  Transport.tsx
src/components/ui/: Button.tsx  Fader.tsx  Knob.tsx  Select.tsx
src/hooks/: useAudioEngine.ts
src/stores/: historyStore.ts  projectStore.ts  transportStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: colorPalette.ts  noteHelpers.ts  timeHelpers.ts
