[package]
name = "cott-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC protocol and shared-memory audio bridge for CottDAW VST workers"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bitflags = { workspace = true }
